// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Shapes/ShapePreview arrow 1`] = `
<div
  className="canvasShapePreview"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-2.5 -2.5 105 105\\" fill=\\"none\\" stroke=\\"black\\">
      <polygon points=\\"0,40 60,40 60,20 95,50 60,80 60,60 0,60\\"/>
    </svg>",
    }
  }
/>
`;

exports[`Storyshots components/Shapes/ShapePreview square 1`] = `
<div
  className="canvasShapePreview"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-2.5 -2.5 105 105\\" fill=\\"none\\" stroke=\\"black\\">
      <rect x=\\"0\\" y=\\"0\\" width=\\"100\\" height=\\"100\\"/>
    </svg>",
    }
  }
/>
`;
